# Othello

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Game.hpp  GameInfo.hpp  Int2D.hpp  LegalMoves.hpp  Player.hpp
src/: Board.cpp  GUI.cpp  Game.cpp  GameInfo.cpp  Int2D.cpp  LegalMoves.cpp  Player.cpp  main.cpp
src/players/: AlphaBetaPlayer.cpp  RandomPlayer.cpp  randomPlayer.cpp
